[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/launchy/launch_external.svg" type="Texture" id=1]
[ext_resource path="res://addons/launchy/launchbutton.gd" type="Script" id=2]
[ext_resource path="res://addons/launchy/config.gd" type="Script" id=3]
[ext_resource path="res://addons/launchy/configTree.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 0.2, 0.23, 0.31, 0.5 )
border_color = Color( 0.2, 0.23, 0.31, 1 )

[node name="ToolButton" type="Button"]
margin_right = 185.0
margin_bottom = 24.0
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 58 )
text = "Open in External Editor"
icon = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 162.0
margin_bottom = 28.0
items = [ "Setup Associations...", null, 0, false, false, -1, 0, null, "", false ]

[node name="Config" type="WindowDialog" parent="."]
margin_right = 800.0
margin_bottom = 480.0
window_title = "Configure Associations..."
resizable = true
script = ExtResource( 3 )

[node name="MarginContainer" type="HBoxContainer" parent="Config"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 26.0
mouse_filter = 0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Config/MarginContainer"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 19.0
text = "Resource Type:"

[node name="LineEditResType" type="LineEdit" parent="Config/MarginContainer"]
margin_left = 105.0
margin_right = 369.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Config/MarginContainer"]
margin_left = 377.0
margin_top = 5.0
margin_right = 467.0
margin_bottom = 19.0
text = "Path to Editor:"

[node name="LineEditPath" type="LineEdit" parent="Config/MarginContainer"]
margin_left = 475.0
margin_right = 739.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="btnAdd" type="Button" parent="Config/MarginContainer"]
margin_left = 747.0
margin_right = 784.0
margin_bottom = 24.0
text = "Add"

[node name="MarginContainer" type="MarginContainer" parent="Config/MarginContainer"]
margin_left = 792.0
margin_right = 792.0
margin_bottom = 24.0

[node name="MarginContainer2" type="MarginContainer" parent="Config/MarginContainer"]
margin_left = 800.0
margin_right = 800.0
margin_bottom = 24.0

[node name="ConfigItems" type="Tree" parent="Config"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -40.0
columns = 2
hide_folding = true
hide_root = true
script = ExtResource( 4 )

[node name="FileDialog" type="FileDialog" parent="Config"]
margin_right = 800.0
margin_bottom = 488.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.exe" )
show_hidden_files = true
current_dir = "/"
current_path = "/"

[node name="HBoxOKCancel" type="HBoxContainer" parent="Config"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = -6.0
custom_constants/separation = 8
alignment = 2

[node name="OK" type="Button" parent="Config/HBoxOKCancel"]
margin_left = 630.0
margin_right = 674.0
margin_bottom = 26.0
text = "Okay"

[node name="Cancel" type="Button" parent="Config/HBoxOKCancel"]
margin_left = 682.0
margin_right = 736.0
margin_bottom = 26.0
text = "Cancel"

[node name="Apply" type="Button" parent="Config/HBoxOKCancel"]
margin_left = 744.0
margin_right = 792.0
margin_bottom = 26.0
disabled = true
text = "Apply"

[node name="MarginContainer" type="MarginContainer" parent="Config/HBoxOKCancel"]
margin_left = 800.0
margin_right = 800.0
margin_bottom = 26.0

[node name="AcceptDialog" type="AcceptDialog" parent="Config"]
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
window_title = "Please Confirm..."
dialog_text = "An association with this Resource type already exists.
Please edit it from the list below."
